Welcome view added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KYC_Android</string>
+    <string name="welcome_2">Kolay ve hızlı bir şekilde \n hesabınızı oluşturabilirsiniz.</string>
 </resources>
